--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
 h2.header2 {
- color: red;
+  color: red;
 }
 
 strong{
- font-size:50px;
+  font-size:50px;
 }
 
 h3{
- font-size: 30px;
+  font-size: 30px;
 }
 
 .clickable {
   cursor: pointer;
   color: #0088cc;
+}
+
+.pull-right {
+  float: right;
 }
